Updates to socials and headers on several subpages

--- a/naa-eula.html
+++ b/naa-eula.html
@@ -69,11 +69,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://kiwilist.app" class="whiteButtonText">
-                        Kiwi List
-                    </a>
-                </li>
-                <li>
                     <a href="contact.html" class="whiteButtonText">
                         Contact
                     </a>
@@ -82,16 +77,10 @@
                     <div class="altHStack">
                         <div class="socials">
                             <a href="https://youtube.com/@doorhingeparkour">
-                                <img src="socials/YouTube Icon.png" class="socialIconMenu">
+                                <img src="socials/YouTube.svg" class="socialIconMenu">
                             </a>
                             <a href="https://tiktok.com/@doorhingeparkour">
-                                <img src="socials/TikTok Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="https://www.etsy.com/shop/DoorHingeApps?listing_id=1361313416">
-                                <img src="socials/Etsy Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="mailto:support@doorhingeapps.com">
-                                <img src="socials/Email Icon.png" class="socialIconMenu">
+                                <img src="socials/TikTok.svg" class="socialIconMenu">
                             </a>
                         </div>
                     </div>
@@ -330,12 +319,6 @@
                     </a>
                     <a href="https://tiktok.com/@doorhingeparkour">
                         <img src="socials/TikTok Icon.png" class="socialIcon">
-                    </a>
-                    <a href="https://www.etsy.com/shop/DoorHingeApps?listing_id=1361313416">
-                        <img src="socials/Etsy Icon.png" class="socialIcon">
-                    </a>
-                    <a href="mailto:support@doorhingeapps.com">
-                        <img src="socials/Email Icon.png" class="socialIcon">
                     </a>
                 </div>
             </div>
