--- a/naa-privacypolicy.html
+++ b/naa-privacypolicy.html
@@ -64,11 +64,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://noathletealone.com" class="whiteButtonText">
-                        No Athlete Alone
-                    </a>
-                </li>
-                <li>
                     <a href="https://kiwilist.app" class="whiteButtonText">
                         Kiwi List
                     </a>
@@ -82,16 +77,10 @@
                     <div class="altHStack">
                         <div class="socials">
                             <a href="https://youtube.com/@doorhingeparkour">
-                                <img src="socials/YouTube Icon.png" class="socialIconMenu">
+                                <img src="socials/YouTube.svg" class="socialIconMenu">
                             </a>
                             <a href="https://tiktok.com/@doorhingeparkour">
-                                <img src="socials/TikTok Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="https://www.etsy.com/shop/DoorHingeApps?listing_id=1361313416">
-                                <img src="socials/Etsy Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="mailto:support@doorhingeapps.com">
-                                <img src="socials/Email Icon.png" class="socialIconMenu">
+                                <img src="socials/TikTok.svg" class="socialIconMenu">
                             </a>
                         </div>
                     </div>
@@ -448,16 +437,10 @@
             <div class="altHStack">
                 <div class="socials">
                     <a href="https://youtube.com/@doorhingeparkour">
-                        <img src="socials/YouTube Icon.png" class="socialIcon">
+                        <img src="socials/YouTube.svg" class="socialIcon">
                     </a>
                     <a href="https://tiktok.com/@doorhingeparkour">
-                        <img src="socials/TikTok Icon.png" class="socialIcon">
-                    </a>
-                    <a href="https://www.etsy.com/shop/DoorHingeApps?listing_id=1361313416">
-                        <img src="socials/Etsy Icon.png" class="socialIcon">
-                    </a>
-                    <a href="mailto:support@doorhingeapps.com">
-                        <img src="socials/Email Icon.png" class="socialIcon">
+                        <img src="socials/TikTok.svg" class="socialIcon">
                     </a>
                 </div>
             </div>
