Updated Icons in header and footer

--- a/the-caedmon-app.html
+++ b/the-caedmon-app.html
@@ -83,10 +83,10 @@
                     <div class="altHStack">
                         <div class="socials">
                             <a href="https://youtube.com/@doorhingeparkour">
-                                <img src="socials/YouTube.svg" class="socialIconMenu">
+                                <img src="socials/Youtube.svg" class="socialIconMenu">
                             </a>
                             <a href="https://tiktok.com/@doorhingeparkour">
-                                <img src="socials/TikTok.svg" class="socialIconMenu">
+                                <img src="socials/Tiktok.svg" class="socialIconMenu">
                             </a>
                         </div>
                     </div>
@@ -218,10 +218,10 @@
             <div class="altHStack">
                 <div class="socials">
                     <a href="https://youtube.com/@doorhingeparkour">
-                        <img src="socials/YouTube.svg" class="socialIcon">
+                        <img src="socials/Youtube.svg" class="socialIcon">
                     </a>
                     <a href="https://tiktok.com/@doorhingeparkour">
-                        <img src="socials/TikTok.svg" class="socialIcon">
+                        <img src="socials/Tiktok.svg" class="socialIcon">
                     </a>
                 </div>
             </div>
