--- a/thecaedmonapp-eula.html
+++ b/thecaedmonapp-eula.html
@@ -87,16 +87,10 @@
                     <div class="altHStack">
                         <div class="socials">
                             <a href="https://youtube.com/@doorhingeparkour">
-                                <img src="socials/YouTube Icon.png" class="socialIconMenu">
+                                <img src="socials/Youtube.svg" class="socialIconMenu">
                             </a>
                             <a href="https://tiktok.com/@doorhingeparkour">
-                                <img src="socials/TikTok Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="https://www.etsy.com/shop/DoorHingeApps?listing_id=1361313416">
-                                <img src="socials/Etsy Icon.png" class="socialIconMenu">
-                            </a>
-                            <a href="mailto:support@doorhingeapps.com">
-                                <img src="socials/Email Icon.png" class="socialIconMenu">
+                                <img src="socials/Tiktok.svg" class="socialIconMenu">
                             </a>
                         </div>
                     </div>
