--- a/naa-eula.html
+++ b/naa-eula.html
@@ -77,10 +77,10 @@
                     <div class="altHStack">
                         <div class="socials">
                             <a href="https://youtube.com/@doorhingeparkour">
-                                <img src="socials/YouTube.svg" class="socialIconMenu">
+                                <img src="socials/Youtube.svg" class="socialIconMenu">
                             </a>
                             <a href="https://tiktok.com/@doorhingeparkour">
-                                <img src="socials/TikTok.svg" class="socialIconMenu">
+                                <img src="socials/Tiktok.svg" class="socialIconMenu">
                             </a>
                         </div>
                     </div>
@@ -315,10 +315,10 @@
             <div class="altHStack">
                 <div class="socials">
                     <a href="https://youtube.com/@doorhingeparkour">
-                        <img src="socials/YouTube Icon.png" class="socialIcon">
+                        <img src="socials/Youtube Icon.png" class="socialIcon">
                     </a>
                     <a href="https://tiktok.com/@doorhingeparkour">
-                        <img src="socials/TikTok Icon.png" class="socialIcon">
+                        <img src="socials/Tiktok Icon.png" class="socialIcon">
                     </a>
                 </div>
             </div>
