--- a/index.html
+++ b/index.html
@@ -258,6 +258,56 @@ crossorigin="anonymous"></script>
 </div>
 
 
+<br>
+
+<div class="infoText"> <br>
+	<div class="hide-mobile">
+		<div class="altHStack">
+			<div class="appsImageContainer"> <img src="Images/Icons/DoorHinge Parkour Icon.png" class="appsImage"> </div>
+			<div class="Hspacer15">
+				<p></p>
+			</div>
+			<div class="appInfo"> 
+				<h2 class="newReleaseBanner">Coming Soon</h2>
+					<!--<h2 class="mobileComingSoonBanner">Version 4.0 Coming Soon</h2>--> 
+				<h1 class="infoSubtextApp">Raycast Extensions</h1>
+				<br>
+				<h4 class="infoSubtextApp"> Hey humans, we're working on developing several extensions for <a href="https://raycast.com" style="text-decoration: underline; color: white;">Raycast</a>. More info will be available soon. </h4>
+				<div class="centerButtons">
+					<!--<div class="fillButtons"> <a href="https://apps.apple.com/us/app/doorhinge-parkour/id1636750816" class="fillButtonText"> Download </a> </div>
+					<div class="Hspacer20">
+						<p></p>
+					</div>
+					<div class="fillButtons"> <a href="https://doorhingeparkour.com" class="fillButtonText"> Learn More </a> </div>-->
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="show-mobile">
+		<div>
+			<div class="appsImageContainerMobile"> <img src="Images/Icons/DoorHinge Parkour Icon.png" class="mobileAppsImage"> </div>
+			<div class="mobileBannerContainter"> 
+				<!--<h2 class="mobileComingSoonBanner">Version 4.0 Coming Soon</h2>--> 
+				<br>
+				<img src="CAC Banner Alt.png" alt="Winner of the 2022 Congressional App Challenge. Oklahoma District 1"> </div>
+			<div class="appInfo">
+				<h1 class="infoSubtextApp">DoorHinge Parkour</h1>
+				<br>
+				<h4 class="infoSubtextApp"> Hello humans! DoorHinge parkour teaches you how to engage in a higher form of movement commonly reffered to as parkour. Learn with simple progressions that even your measly human brain can comprehend. We’ve included videos because we know your feeble mind cannot understand the descriptions we give you. </h4>
+				<div class="centerButtons">
+					<div class="fillButtons"> <a href="https://apps.apple.com/us/app/doorhinge-parkour/id1636750816" class="fillButtonText"> Download </a> </div>
+					<div class="Hspacer20">
+						<p></p>
+					</div>
+					<div class="fillButtons"> <a href="https://doorhingeparkour.com" class="fillButtonText"> Learn More </a> </div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
+</div>
+
+
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
      crossorigin="anonymous"></script>
