Added section about in-development Raycast extensions.

--- a/index.html
+++ b/index.html
@@ -260,10 +260,25 @@ crossorigin="anonymous"></script>
 
 <br>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hj-2+2s-98+9b"
+     data-ad-client="ca-pub-5723952362361159"
+     data-ad-slot="9177673018"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+<br>
+
 <div class="infoText"> <br>
 	<div class="hide-mobile">
 		<div class="altHStack">
-			<div class="appsImageContainer"> <img src="Images/Icons/DoorHinge Parkour Icon.png" class="appsImage"> </div>
+			<!--<div class="appsImageContainer"> <img src="Images/Icons/DoorHinge Parkour Icon.png" class="appsImage"> </div>-->
 			<div class="Hspacer15">
 				<p></p>
 			</div>
@@ -272,7 +287,7 @@ crossorigin="anonymous"></script>
 					<!--<h2 class="mobileComingSoonBanner">Version 4.0 Coming Soon</h2>--> 
 				<h1 class="infoSubtextApp">Raycast Extensions</h1>
 				<br>
-				<h4 class="infoSubtextApp"> Hey humans, we're working on developing several extensions for <a href="https://raycast.com" style="text-decoration: underline; color: white;">Raycast</a>. More info will be available soon. </h4>
+				<h4 class="infoSubtextApp"> Hey humans, we're working on developing several extensions for <a href="https://raycast.com" style="text-decoration: underline; color: white;">Raycast</a>. Raycast is a spotlight search alternative for Mac that supports features such as third party extensions and runs extremely fast. More info on our extensions will be available soon. </h4>
 				<div class="centerButtons">
 					<!--<div class="fillButtons"> <a href="https://apps.apple.com/us/app/doorhinge-parkour/id1636750816" class="fillButtonText"> Download </a> </div>
 					<div class="Hspacer20">
@@ -307,7 +322,7 @@ crossorigin="anonymous"></script>
 	<br>
 </div>
 
-
+<br>
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5723952362361159"
      crossorigin="anonymous"></script>
