--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
 		</div>
 		<br>
 		<br>
+
+		<div class="infoText">
+			<h1 class="infoSubtextLeft"> DoorHinge Parkour Version 5.0 </h1>
+			<h3 class="infoSubtextLeft">  Say hello to AI. This update brings major changes to DoorHinge Parkour. We've added AI parkour features like AI help with skills and obstacle course generation. We've also built the rest of the app from the ground up with a brand new design to provide a better experience. App themes are also redesigned to look good across the entire app. </h3>
+		</div>
+		<br>
+		<br>
+
 		<div class="infoText">
 
 			<!-- Begin Mailchimp Signup Form -->
@@ -71,9 +79,8 @@
 					method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
 					target="_self">
 					<div id="mc_embed_signup_scroll">
-						<h2 class="infoSubtextLeft">Clog your Email!</h2>
-						<h4 class="infoSubtextLeft">Hiya! You looking for some more crap in your inbox? Sign up for our
-							mailing list then!</h4>
+						<h2 class="infoSubtextLeft">Mailing List</h2>
+						<h4 class="infoSubtextLeft">Bonjour! Put your email below and we'll add you to our mailing list.</h4>
 						<div class="infoSubtextApp">
 							<input type="email" placeholder="email" value="" name="EMAIL" class="emailField"
 								id="mce-EMAIL" required>
@@ -121,7 +128,7 @@
 		<br>
 		<div class="infoText">
 			<h1 class="infoSubtextLeft">¿Como te Sientes?</h1>
-			<h4 class="infoSubtextLeft"> Yk, social media exists for a reason ↓ </h4>
+			<h4 class="infoSubtextLeft"> Follow us...<br><br> online. Please don't stalk me. </h4>
 			<div class="centerButtons">
 				<div class="HStack"> <a href="https://youtube.com/@doorhingeparkour" class="otherFillButtons"> <img
 							src="socials/Youtube.svg" class="otherSocialIcon"> </a>
@@ -147,7 +154,7 @@
 		<br>
 		<div class="infoText">
 			<h1 class="infoSubtextLeft">Contact</h1>
-			<h4 class="infoSubtextLeft"> Hey there! Wanna contact us? I’m sure you can figure it out. Thx ツ </h4>
+			<h4 class="infoSubtextLeft"> Want to tell us how much you love our stuff? Thx, just click below ツ </h4>
 			<div class="stack"> <img src="Images/notcontactbuttons.png" class="stacked-image">
 				<div class="theThing">
 					<div class="fillButtonsContact"> <a href="contact.html" class="outlineButtonText"> Contact </a>
