--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<br>
 
 		<div class="infoText">
-			<h1 class="infoSubtextLeft"> DoorHinge Parkour Version 5.0 </h1>
+			<h1 class="infoSubtextLeft"> Coming Soon: DoorHinge Parkour Version 5.0 </h1>
 			<h3 class="infoSubtextLeft">  Say hello to AI. This update brings major changes to DoorHinge Parkour. We've added AI parkour features like AI help with skills and obstacle course generation. We've also built the rest of the app from the ground up with a brand new design to provide a better experience. App themes are also redesigned to look good across the entire app. </h3>
 		</div>
 		<br>
